# 2025-tfg-jogalv01

./: README.md
sim-mcu/: Cargo.toml  Readme.md  build.rs  cleaner.py  mcu_raw_rtt.txt  plot.py  sim_output.csv  telemetry.csv
sim-mcu/src/: lib.rs
sim-mcu/telemetry/: docker-compose.yml  populatedb.py  stream.py  test.sh
sim-mcu/telemetry/mosquitto/: mosquitto.conf
sim-mcu/telemetry/telegraf/: telegraf.conf
sim-mcu/tests/: hello_test.rs
