[package]
edition      = "2024"
name         = "hello-embassy"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "hello-embassy"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp32s3"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-executor = { version = "0.9.1", features = [] }
embassy-time     = "0.5.0"
esp-alloc        = "0.9.0"
rtt-target       = "0.6.2"

critical-section = "1.2.0"
static_cell      = "2.1.1"
heapless = "0.9.1"
libm = "0.2.15"

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "embassy",
  "external-executor",
  "xtensa-semihosting",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
